<resources>
    <string name="app_name">MySchedule</string>
    <string name="title_tasks">Задачи</string>
    <string name="title_timetable">Расписание</string>
    <string name="title_settings">Настройки</string>
    <string name="addNew">Нажмите “+”, чтобы добавить</string>
    <string name="newObject">Изменение</string>
    <string name="title">Заголовок</string>
    <string name="about">Предмет</string>
    <string name="task_about_text">Описание</string>
    <string name="task_title_text">Задача</string>
    <string name="date_task_text">ВЫБРАТЬ ДАТУ</string>
    <string name="checkbox_task_text">Выполнение</string>
    <string name="notification">Оповещение</string>
    <string name="deleted">УДАЛИТЬ</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="del_task_text">Удалить все записи заданий</string>
    <string name="del_timetable_text">Удалить все записи расписания</string>
    <string name="about_me_text">О приложении</string>
    <string name="notification_text">Уведомление</string>
    <string name="theme_text">Темная тема</string>
</resources>