<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.settings.SettingsFragment">

            <View
                android:id="@+id/del_tasks_view"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:background="@color/primaryLightColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/theme"
                app:layout_constraintVertical_bias="0.0"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground" />

            <View
                android:id="@+id/view_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/bottomLine"
                app:layout_constraintBottom_toBottomOf="@+id/del_tasks_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/del_tasks_view"
                app:layout_constraintVertical_bias="1.0" />

            <View
                android:id="@+id/del_timetable_view"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:background="@color/primaryLightColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/del_tasks_view"
                app:layout_constraintVertical_bias="0.0"
                android:foreground="?android:attr/selectableItemBackground"/>

            <View
                android:id="@+id/view_line2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/bottomLine"
                app:layout_constraintBottom_toBottomOf="@+id/del_timetable_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/del_tasks_view"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/del_tasks_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/del_task_text"
                android:textColor="#FF0000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/del_tasks_view"
                app:layout_constraintEnd_toEndOf="@+id/del_tasks_view"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/del_tasks_view"
                app:layout_constraintTop_toTopOf="@+id/del_tasks_view" />

            <TextView
                android:id="@+id/del_timetable_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/del_timetable_text"
                android:textColor="#FF0000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/del_timetable_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/del_timetable_view"
                app:layout_constraintTop_toBottomOf="@+id/view_line" />

            <View
                android:id="@+id/about_view"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:background="@color/primaryLightColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/del_timetable_view"
                app:layout_constraintVertical_bias="0.0"
                android:foreground="?android:attr/selectableItemBackground"/>
            <TextView
                android:id="@+id/about_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/about_me_text"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/about_view"
                app:layout_constraintEnd_toEndOf="@+id/about_view"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/about_view"
                app:layout_constraintTop_toTopOf="@+id/about_view" />

            <View
                android:id="@+id/view_line3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/bottomLine"
                app:layout_constraintBottom_toBottomOf="@+id/about_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_view"
                app:layout_constraintVertical_bias="1.0" />



            <View
                android:id="@+id/theme"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:background="@color/primaryLightColor"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
            <View
                android:id="@+id/view_line5"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/bottomLine"
                app:layout_constraintBottom_toBottomOf="@+id/theme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/theme"
                app:layout_constraintVertical_bias="1.0" />

            <Switch
                android:id="@+id/switchTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/theme_text"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintBottom_toTopOf="@+id/view_line5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/theme"
                app:layout_constraintTop_toTopOf="@+id/theme"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>